--- a/INTEX/Views/Home/Confirmation.cshtml
+++ b/INTEX/Views/Home/Confirmation.cshtml
@@ -11,4 +11,4 @@
     utilize the "Track Orders" function within your customer portal!
     </p>
 <br />
-<a class="btn btn-lg btn-success" href="@Url.Action("displayAccount", "Accounts", new { @*WOID = ViewBag.WOID,*@ CID = ViewBag.CID})">FINISH</a>
+<a class="btn btn-lg btn-success" href="@Url.Action("displayAccount", "Accounts", new { CID = ViewBag.CID})">FINISH</a>
