--- a/INTEX/Views/Accounts/displayAccount.cshtml
+++ b/INTEX/Views/Accounts/displayAccount.cshtml
@@ -10,8 +10,7 @@
 
     @Model.CompanyName
 
-    @Model.ClientFirstName 
-    @Model.ClientLastName <br />
+   <br />
 </h1>
 <br />
 <div class="container">
@@ -19,6 +18,13 @@
 
         <div class="col-md-6 w3-card-4 w3-blue-gray "  >
             <p>Account ID:@Model.AccountID </p>
+          
+            <p>
+                Company Representative:<b>
+                    @Model.ClientFirstName
+                @Model.ClientLastName
+            </b>
+            </p>
             <br />
             <p> Account Balance: </p>
             <div class="w3-card-2">
@@ -49,7 +55,7 @@
             <p class="w3-center" style="font-size:25px">Sam Smith</p>
             <p style="font-size:20px;padding-left:200px">(801)576-0977</p>
             <br />
-            <p style="padding-bottom:10px; padding-left:450px"><a  class="btn btn-md btn-success" href="@Url.Action("Create", "WorkOrders", new { ClientID = Model.ClientID})">Contact</a></p>
+            <p style="padding-bottom:10px; padding-left:450px"><a  class="btn btn-md btn-success" href="@Url.Action("Contact", "Home", new { ClientID = Model.ClientID})">Contact</a></p>
 
         </div>
 
@@ -71,7 +77,7 @@
     </div>
     <div class="col-xs-4">
 
-        <p style="padding-left:50px"><a class="btn btn-lg " style="background-color:#607d8b!important" href="">Get a Quote</a></p>
+        <p style="padding-left:50px"><a class="btn btn-lg " style="background-color:#607d8b!important" href="@Url.Action("Quote", "Home")">Get a Quote</a></p>
 
     </div>
     <div class="col-xs-4">
