--- a/INTEX/Views/Home/Index.cshtml
+++ b/INTEX/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
     </div>
     <div class="w3-card-4 w3-margin w3-dark-gray" style="padding:15px">
         <div class="row">
-            <div class="col-md-6" style="padding-left:50px">
+            <div class="col-md-6" style="text-align:center">
             <p class="w3-center" style="font-size:45px"><h3>Current Client</h3></p>
                 </div> 
-            <div class="col-md-6" style="padding-top:10px; padding-left:180px">
+            <div class="col-md-6" style="padding-top:5px; text-align:center">
             <a href="@Url.Action("Login", "Accounts")"  class="btn btn-info btn-lg">Access Your Account &raquo;</a>
             </div>
         </div>
