--- a/INTEX/Views/Tests/displayTests.cshtml
+++ b/INTEX/Views/Tests/displayTests.cshtml
@@ -42,15 +42,17 @@
                     </td>
                     <td>
                         <p>This test will only run if specific trigger conditions are met. If the test is run, you will be charged additional costs. Do you want to run this test regardless of the triggers?</p>
-                        @Html.DropDownList("Response",
+                        <div style="color:black">
+                            @Html.DropDownList("Response",
 new SelectList(
 new[]
 {
-                        new { Value = "true", Text = "Yes" },
-                        new { Value = "false", Text = "No"},
-                 },
-                 "Value",
-                 "Text"))
+        new { Value = "true", Text = "Yes" },
+        new { Value = "false", Text = "No"},
+},
+"Value",
+"Text"))
+                        </div>
                         <br />
                     </td>
                     
