worked my Assay off on the SQL statement

--- a/INTEX/Views/Home/Summary.cshtml
+++ b/INTEX/Views/Home/Summary.cshtml
@@ -15,7 +15,7 @@
                 @Html.DisplayNameFor(model => model.AssayProtocol)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CompletionEstimate) <span style="font-size:10px">(*days)</span>
+                @Html.DisplayNameFor(model => model.CompletionEstimate) <span style="font-size:10px">(*hours)</span>
             </th>
             <th></th>
         </tr>
