--- a/INTEX/Views/Home/Catalog.cshtml
+++ b/INTEX/Views/Home/Catalog.cshtml
@@ -49,10 +49,10 @@
         <td>
             @Html.DisplayFor(modelItem => item.CompletionEstimate)
         </td>
-        <td>
+        <td style="color:black">
             @Html.DisplayFor(modelItem => item.IsRequired)
         </td>
-        <td>
+        <td style="color:black">
             @Html.DisplayFor(modelItem => item.Conditional)
         </td>
         <td>
