--- a/INTEX/Views/Home/Quote.cshtml
+++ b/INTEX/Views/Home/Quote.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.AssayProtocol)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AssayCost)
+            $@Html.DisplayFor(modelItem => item.AssayCost)
         </td>
         <td>
         </td>
