a whole buncha crap

--- a/INTEX/Views/Accounts/displayAccount.cshtml
+++ b/INTEX/Views/Accounts/displayAccount.cshtml
@@ -77,7 +77,7 @@
     </div>
     <div class="col-xs-4">
 
-        <p style="padding-left:50px"><a class="btn btn-lg " style="background-color:#607d8b!important" href="@Url.Action("Quote", "Home")">Get a Quote</a></p>
+        <p style="padding-left:50px"><a class="btn btn-lg " style="background-color:#607d8b!important" href="@Url.Action("QuoteA", "Home",new { CID = Model.ClientID})">Get a Quote</a></p>
 
     </div>
     <div class="col-xs-4">
