--- a/INTEX/Views/Shared/_Layout.cshtml
+++ b/INTEX/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
                 <ul class="nav navbar-nav" style="float:right">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Singapore", "LoginSing", "Home")</li>
-                    <li>@Html.ActionLink("Seattle", "LoginSeat", "Home")</li>
+                    <li>@Html.ActionLink("Singapore", "EmployeeLogin", "Home")</li>
+                    <li>@Html.ActionLink("Seattle", "EmployeeLogin", "Home")</li>
                    
              
                 </ul>
