--- a/INTEX/Views/WorkOrders/Index.cshtml
+++ b/INTEX/Views/WorkOrders/Index.cshtml
@@ -4,84 +4,84 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2 class="w3-center">List of All Current Work Orders</h2>
+<div class="w3-card-4 w3-blue-gray" style="padding:15px; width:1200px">
+    
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.WorkOrderNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.OrderDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DueDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ClientID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PaymentInfo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Comments)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CompoundName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Complete)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LTNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SalesAgentID)
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.WorkOrderNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DueDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PaymentInfo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comments)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CompoundName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Complete)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LTNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SalesAgentID)
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.WorkOrderNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DueDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClientID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PaymentInfo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Comments)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CompoundName)
+                </td>
+                <td style="color:black">
+                    @Html.DisplayFor(modelItem => item.Complete)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LTNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SalesAgentID)
+                </td>
+                <td>
+                    <span style="font-weight:800; color:antiquewhite"> @Html.ActionLink("Edit", "Edit", new { id = item.WorkOrderNumber }) </span> <hr />
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.WorkOrderNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OrderDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DueDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PaymentInfo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comments)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompoundName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Complete)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LTNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SalesAgentID)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.WorkOrderNumber }) |
-            @Html.ActionLink("Details", "Details", new { id = item.WorkOrderNumber }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.WorkOrderNumber })
-        </td>
-    </tr>
-}
+                    <span style="font-weight:800; color:antiquewhite"> @Html.ActionLink("Delete", "Delete", new { id = item.WorkOrderNumber })</span>
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+</div>
