None shall pass

--- a/INTEX/Views/Home/Index.cshtml
+++ b/INTEX/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 <p>
                     Receive a discount on your first order and return the favor to whomever reffered you!
                 </p>
-                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="@Url.Action("Login", "Accounts")">Learn more &raquo;</a></p>
+                <p><a class="btn btn-lg" style="background-color:#607d8b!important;  color:white" href="https://blog.hubspot.com/service/how-to-get-referrals">Learn more &raquo;</a></p>
                 <br />
             </div>
         </div>
