--- a/INTEX/Views/Shared/_Layout.cshtml
+++ b/INTEX/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="float:right">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                   
                     <li>@Html.ActionLink("Singapore", "EmployeeLogin", "Home")</li>
-                    <li>@Html.ActionLink("Seattle", "EmployeeLogin", "Home")</li>
+                    <li>@Html.ActionLink("Seattle", "EmployeeLogin1", "Home")</li>
                    
              
                 </ul>
