--- a/INTEX/Views/Clients/Index.cshtml
+++ b/INTEX/Views/Clients/Index.cshtml
@@ -6,83 +6,84 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CompanyName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientFirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientLastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientCity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientState)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientZip)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientEmail)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SpecialCondition)
-        </th>
-        <th></th>
-    </tr>
+    
+    <div class="w3-card-4 w3-blue-gray" >
+        <table class="table-responsive" style="width:100%" cellpadding="0" cellspacing="0">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.CompanyName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientFirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientLastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientAddress)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientCity)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientState)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientZip)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientEmail)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ClientPhone)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.SpecialCondition)
+                </th>
+                <th></th>
+            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientFirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientLastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientCity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientState)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientZip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientEmail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClientPhone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SpecialCondition)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ClientID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.ClientID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ClientID })
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CompanyName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientFirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientLastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientAddress)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientCity)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientState)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientZip)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientEmail)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientPhone)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SpecialCondition)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ClientID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.ClientID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ClientID })
 
-        </td>
-    </tr>
-}
+                    </td>
+                </tr>
+            }
 
-</table>
+        </table>
+    </div>
