--- a/INTEX/Views/Home/Contact.cshtml
+++ b/INTEX/Views/Home/Contact.cshtml
@@ -2,16 +2,16 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    9600 College Way N<br />
+    Seattle, WA 98103-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@northwestlabs.com">Support@NWlabs.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@NWlabs.com">Marketing@NWlabs.com</a>
 </address>
